remove jdk5 code
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/branches/wicket-1.x@513171 13f79535-47bb-0310-9956-ffa450edef68